fix: make win bonus score no longer clipped

--- a/src/app/components/Game/index.module.scss
+++ b/src/app/components/Game/index.module.scss
@@ -48,4 +48,5 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  overflow-y: hidden;
 }
